--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "nodemon": "^2.0.16",
     "pg": "^8.7.3",
     "pgtools": "^0.1.1",
+    "react-router": "^5.2.1",
+    "react-router-dom": "^5.3.0",
     "sequelize": "^6.19.0"
   }
 }
